Fixed Close Button Z-index Bug

--- a/item/styles.css
+++ b/item/styles.css
@@ -54,7 +54,7 @@ main {
     width: 22.5pt;
     height: 22.5pt;
     padding: 0;
-    z-index: 1;
+    z-index: 5;
     transition: opacity 0.2s ease, background 0.2s ease;
   }
 
